# Solver-to-Predict-the-Atmospheric-Pollution

./: CMakeLists.txt  README.md  build.sh
LibProject/src/: CMakeLists.txt
MainProject/include/: Equation.h  ITimeDiscretization.h  Problem.h
MainProject/src/: CMakeLists.txt  Equation.cpp  ITimeDiscretization.cpp  Problem.cpp  main.cpp
